# aiply

./: Cargo.toml  README.md  flake.nix
src/: instruction_parser.rs  integration_tests.rs  lib.rs  llm.rs  main.rs  markdown_parser.rs  rust_query.scm  tests.rs  ts_query.scm
src/tests/parse/inputs/: 1.md  2.md  3.md  4.md  5.md  6.md
src/tests/parse/snapshots/: 1.md.snap  2.md.snap  3.md.snap  5.md.snap
src/tests/snapshots/: 1.md.snap  2.md.snap  2.md.snap.new  4.md.snap  6.md.snap
tests/inputs/: 1.md
