[package]
name = "aiply"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
insta = "1.40.0"
pulldown-cmark = "0.12.1"
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
